# blockchain-messaging-protocol

./: .gitignore  README.md  pyproject.toml
benchmarks/: run_benchmarks.py
docs/wiki/: Architecture.md  Benchmarks.md  Getting-Started.md  Home.md
src/client/: cli.py  client.py
src/core/: __init__.py  blockchain.py  message.py
src/engine/: __init__.py  engine.py
src/server/: server.py
