[project]
name = "blockchain-messaging-protocol"
version = "0.1.0"
description = "A decentralized P2P messaging protocol built on blockchain principles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "msgpack>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bmp = "src.client.cli:cli"
bmp-server = "src.server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
